apps/casper: SAR App implemented in Casper

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "exp/apps/halide-sar-app"]
 	path = exp/apps/halide-sar-app
 	url = git@github.com:acolinisi/halide-sar-app.git
+[submodule "exp/apps/casper/halide-sar-app"]
+	path = exp/apps/casper/halide-sar-app
+	url = git@github.com:ISI-apex/halide-sar-app.git
