exp/ch/theta: limit mem per node
So that processes don't get killed by OOM killer but die on their own.

--- a/exp/cahn-hilliard/theta/Makefile
+++ b/exp/cahn-hilliard/theta/Makefile
@@ -38,6 +38,7 @@ MAX_SLOTS_PER_NODE?=64
 # The '--map-by core' appears to be incompatible with --host
 # +e, so default to ppr-N-node for most targets.
 MAPBY?=ppr-$(MAX_SLOTS_PER_NODE)-node
+MEM_PER_NODE:=190G
 
 DBG_Q_MAX_NODES:=8
 MAIN_Q_MIN_NODES:=128
@@ -307,6 +308,7 @@ $(DATA_DIR)/ch_%.csv: | $(DATA_DIR)/
 		bash $(PWD)/fch.sh "$(call tgt-extract,mesh,$*)" \
 			"$(call tgt-extract,ranks,$*)" \
 			"$(call tgt-tasks-per-node,$*)" --elapsed-out "$@" \
+			--mem-per-node "$(MEM_PER_NODE)"
 			$(if $(TASKS),--tasks "$(TASKS)") \
 		2>&1 | tee "$@.log"
 else # IN=0
