compiler,exp/apps/casper/sar: target for variants
Enables switching between CPU and GPU variants of Halide kernel
at runtime.

--- a/exp/apps/casper/sar/tuned-params.ini
+++ b/exp/apps/casper/sar/tuned-params.ini
@@ -1,24 +1,42 @@
 [backprojection 0]
+target = host-no_runtime
 vectorsize = 16
 blocksize = 64
+use_gpu = false
 
 [backprojection 1]
+target = x86-64-linux-avx-cuda-cuda_capability_35-large_buffers-no_runtime-sse41
 vectorsize = 16
 blocksize = 64
+use_gpu = true
 
 [ip_uv 0]
+target = host-no_runtime
 [ip_uv 1]
+target = x86-64-linux-avx-cuda-cuda_capability_35-large_buffers-no_runtime-sse41
 [ip_k 0]
+target = host-no_runtime
 [ip_k 1]
+target = x86-64-linux-avx-cuda-cuda_capability_35-large_buffers-no_runtime-sse41
 [ip_v_hat 0]
+target = host-no_runtime
 [ip_v_hat 1]
+target = x86-64-linux-avx-cuda-cuda_capability_35-large_buffers-no_runtime-sse41
 [ip_u_hat 0]
+target = host-no_runtime
 [ip_u_hat 1]
+target = x86-64-linux-avx-cuda-cuda_capability_35-large_buffers-no_runtime-sse41
 [ip_pixel_locs 0]
+target = host-no_runtime
 [ip_pixel_locs 1]
+target = x86-64-linux-avx-cuda-cuda_capability_35-large_buffers-no_runtime-sse41
 
 [img_output_to_dB 0]
+target = host-no_runtime
 [img_output_to_dB 1]
+target = x86-64-linux-avx-cuda-cuda_capability_35-large_buffers-no_runtime-sse41
 
 [img_output_u8 0]
+target = host-no_runtime
 [img_output_u8 1]
+target = x86-64-linux-avx-cuda-cuda_capability_35-large_buffers-no_runtime-sse41
