exp/apps/mpitest: version that sleeps

--- a/exp/apps/mpitest/Makefile
+++ b/exp/apps/mpitest/Makefile
@@ -1,4 +1,4 @@
-all: mpitest mpitest_dbg
+all: mpitest mpitest_dbg mpitest_sleep
 
 mpitest: mpitest.c
 	mpicc -O0 -g -o $@ $<
@@ -6,5 +6,8 @@ mpitest: mpitest.c
 mpitest_dbg: mpitest.c
 	mpicc -O0 -g -DWAIT_FOR_DEBUGGER -o $@ $<
 
+mpitest_sleep: mpitest.c
+	mpicc -O0 -g -DSLEEP -o $@ $<
+
 clean:
-	rm -f *.o mpitest mpitest_dbg
+	rm -f *.o mpitest mpitest_dbg mpitest_sleep
