exp/ch/theta: suffix targets with ^ instead of slash
slash breaks DATADIR detection.

--- a/exp/cahn-hilliard/theta/Makefile
+++ b/exp/cahn-hilliard/theta/Makefile
@@ -67,7 +67,7 @@ endef
 define target-set-rule
 $(DATA_DIR)/$(1): DATS=$(2)
 $(DATA_DIR)/$(1): $(if $(IN),$(patsubst %,$(DATA_DIR)/%,$(2)))
-$(DATA_DIR)/$(1)/split: $(patsubst %,$(DATA_DIR)/%,$(2)) ;
+$(DATA_DIR)/$(1)^split: $(patsubst %,$(DATA_DIR)/%,$(2)) ;
 endef
 define target-set
 $(eval $(call target-set-rule,$(1),$(2)))
