exp/ch/theta: forward config vars

--- a/exp/cahn-hilliard/theta/Makefile
+++ b/exp/cahn-hilliard/theta/Makefile
@@ -355,6 +355,10 @@ $(DATA_DIR)/%: | $(DATA_DIR)/
 		make -j -k -C $(CURDIR) IN=1 \
 		DATA_DIR=$(DATA_DIR) MPIRUN_ARGS='$(MPIRUN_ARGS)' \
 		VERBOSE=$(VERBOSE) TASKS=$(TASKS) \
+		NOLOCAL=$(NOLOCAL) \
+		OVERSUBSCRIBE=$(OVERSUBSCRIBE) \
+		DISPLAYMAP=$(DISPLAYMAP) \
+		DEDI_NODE_FOR_RANK0=$(DEDI_NODE_FOR_RANK0) \
 		$(patsubst %,$(DATA_DIR)/%,$(subst +, ,$*))
 
 job:
